--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 if(today.getDay()==5)   day   =   "星期五 " 
                 if(today.getDay()==6)   day   =   "星期六 " 
                 document.getElementById('nowDateTimeSpan').innerHTML=yyyy+"-"+MM +"-"+ dd +" " + hh+":"+mm+":"+ss;   
-                <!--setTimeout('startTime()',1000);//每一秒中重新加载startTime()方法 -->
+                setTimeout('startTime()',1000);//每一秒中重新加载startTime()方法 -->
             }   
 
             function checkTime(i)   
